fix itinerary detail page not showing activities

--- a/src/pages/ItineraryDetails/ItineraryDetails.module.css
+++ b/src/pages/ItineraryDetails/ItineraryDetails.module.css
@@ -74,7 +74,7 @@
   font-size: 20px;
 }
 
-.activitytTitle{
+.activityTitle{
   background-color: #7b8fa1;
   color: rgb(255, 255, 255);
   border: 3px solid #567189;
